sass/styles.scss
//@import "./fonts/roboflex.css";
//@use "./fonts/robotoflex";

/* Important placeholder for Google Fonts plugin to insert font import code */
/* google-fonts */

@use "variables.scss";
@use "fontcss/roadrage.scss";
@use "fontcss/bebasneue.scss";
@use "fontcss/assc.scss";
@use "fontcss/tiktoksans.scss";

//@import url('https://fonts.googleapis.com/css2?family=TikTok+Sans:opsz,wdth,wght@12..36,91.8,300..900&display=swap');
//@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
//@import url('https://fonts.googleapis.com/css2?family=Road+Rage&display=swap');
//@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap');

/*@mixin font($stretch: normal) {
    font-family: "Roboto Flex Regular", Arial, sans-serif;
    font-stretch: $stretch;
}*/
//@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wdth,wght@0,62.5,100..900;1,62.5,100..900&display=swap');




body {
    display: flex; // Without this, there will be a space between Nav and main
    flex-direction: column;

    font-family: var(--font-main);
    font-size: var(--main-font-size);
    line-height: 1.5;
    max-width: 40em;
    margin: 0;
    color: var(--body-font-color); //color: #212427;
    background-color: var(--body-bg-color);
    
    -webkit-font-smoothing: antialiased; /* For WebKit browsers (Chrome, Safari) */
    -moz-osx-font-smoothing: grayscale;  /* For Firefox on macOS */

    word-spacing: 2px;
}
body.light-mode {}

body.dark-mode {
    --body-bg-color: #474444;
    --body-font-color: rgb(213 213 213);
    --main-color: rgb(148 185 219);
    --main-color: rgb(219, 148, 148);
    --link-color: lightblue;
    --header-color: var(--body-font-color);
    --h-color: #b9b4b4;
    --panel-color-1: #292828;
}


body.dark-mode blockquote {
    background: #373737;
    color: #cacaca;
}

h1, h2, h3, h4, h5, h6 {
    //color: var(--main-color);
    margin-block: 1rem;
    font-weight: 400;
    font-family: "Bebas Neue","Tiktok Sans","Google Sans",arch, "Roboto Flex Regular", Arial, sans-serif;
	
	color: var(--h-color);
}

a {    
    text-underline-offset: 3px;
    color: inherit;
    text-decoration-color: var(--link-color);   
}

p {
    margin-block: 0.5rem;
    margin-block: 1rem;
}

// ====== Header css ====
header {
    padding-inline: 1.5rem;
}
.header-pic {
    text-align: center;
    display: flex;
	justify-content: center;
}
.header-pic img {
    height: 70px;
}
.header-text {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    align-items: center;
}
h1.title-header {
    font-family: "Road Rage", "Amatic SC";
    //font-weight: 700;;
    font-size: 3.1rem;
}

nav {
    gap: 1rem;
    display: flex;
    place-content: flex-start;
    justify-content: center;
    overflow-x: auto;
    position: sticky;
    top: 0;
    background: white;//var(--panel-color-1);
	box-shadow: 0px 1px 0px #80808045;

    a {
        text-decoration: none; // remove underline on nav items
        font-size: var(--nav-link-size);
        text-align: center;
        position: relative;
		
		color: #8c8f93;
		padding: 14px 0;
		font-family: "TikTok Sans";
    }
    a.active {
        color: var(--header-color);
        text-decoration: none;
    }
	a.active::after {
		content: "";
		position: absolute;
		left: 0;
		right: 0;
		bottom: 0px;
		height: 2px;
		background: #898989;
	}	
    // Put a half blue bar on active link
    /*
	a.active::before {
        content: '';
        background-color: hsl(196deg 61% 58% / 18%);
        position: absolute;
        left: 0;
        bottom: 3px;
        width: 100%;
        height: 8px;
        z-index: -1;
        transition: all .3s ease-in-out;
    }
    a:hover::before {
        bottom: 0;
        height: 100%;
    }
	*/
}

//span.nav-link-divider {
//    color: darkgrey;
//}

// ---- Style header title to be coloured and clipped ---
.title-header a {
    text-decoration: none;
    text-transform: uppercase;
    //color: var(--main-color);
}

// ====

// === Panel coloring

header,nav {
	background: var(--panel-color-1);
	    //box-shadow: 1px 1px 1px #d7d7d7
}

.table-of-contents {
    color: #575757;
}
.table-of-contents ol li {
    padding-block: .19rem;
    font-size: var(--toc-font-size);
}

main {
    display: flex;
    flex-direction: column;
    min-height: 60vh;
    padding: 1.2rem;
}


//Style the various graphic images in the blog articles ====
img.blog-graphic {
	width:15%; 
	float:left;
	padding-right: 10px;
	margin: 0;
}

// Style images inserted through markdownit with class .image
img.image{
    width: 80%;
    display: block;
    margin: auto;
    margin-block: 40px;
    box-shadow: 0px 0px 4px 0px #979797;
}

blockquote {
    padding: 1rem;
    font-size: 85%;
    color: #338342;
    background: #58ef7321;
    margin-inline: 0;
    border-radius: 5px;

    p {
        margin: 0;
        padding: 0;
    }
}

/*
hr.rainbow {
    margin: 0rem 0; //margin: 0.5rem 0; /// Consistent vertical spacing
    border: none; // Remove default border 
    height: 4px; // Set the thickness of the line
    background-image: repeating-linear-gradient(
        to right,
        var(--col-1) 0, var(--col-1) 50px,
        var(--col-2) 50px, var(--col-2) 100px,
        var(--col-3) 100px, var(--col-3) 150px,
        var(--col-4) 150px, var(--col-4) 200px,
        var(--col-5) 200px, var(--col-5) 250px,
        var(--col-6) 250px, var(--col-6) 300px,
        var(--col-7) 300px, var(--col-7) 350px,
        var(--col-8) 350px, var(--col-8) 400px
      );    
    
    background-size: 400px 100%; // Match gradient width to total range
    background-repeat: repeat-x; // Ensure horizontal repetition
}
*/

hr, hr.line {
    background: none;
    border: 1px dashed rgb(163 163 163 / 46%);
    width: 100%;
}

ul {
    padding-inline-start: 1.5rem;
    margin-block: 0;
    //list-style: circle;
    li{}
}
.blog-list {
    margin-block: 0.5rem;
}


li::marker {
    color: var(--main-color);
}

ol {
    padding-inline-start: 1.5em;
    
    li {
        padding-inline-start: 0.19rem;
    }    
}
//===============
.home-blog-list ul, .blog-list ul{
    padding: 0;
    padding-inline-start: 1rem;
}

time.blog-post-date {
    font-size: 75%;
    color: grey;
    display: block;
    margin-block-start: -0.6rem;
}
.blog-list ul li, .home-blog-list ul li{
    list-style-type: none;
}
time.blog-list-date{
    font-size: 70%;
    color: grey;
    display: block;
    //margin-block-start: 0.5rem;
}

.home-blog-list ul li, .blog-list ul li{
    
    /*
    list-style-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="10" width="6.25" viewBox="0 0 320 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="%23f03838" d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>');
    position: relative;
    right: 5px;
    
    
    padding-block-end: 10px;
    padding-left: 10px;
    */

    //background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="10" width="6.25" viewBox="0 0 320 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="%23f03838" d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>');
    /*
    background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"/></svg>');

    background-repeat: no-repeat;
    background-position: left center;
    background-position: left 0.5em;
    background-size: 8px;
    padding-left: 20px;
    position: relative;
    right: 1rem;
    */

  
    position: relative;
    right: 1rem;
    padding-block: .5rem;
}

footer {
    text-align: center;
    font-size: 15px;
    padding-block: 1rem;
	background: var(--panel-color-1);
    svg {
        //stroke: var(--main-color);
    }
}

// ==== Details design ======
details {
    font-size: 0.8em;

    border: 1px dashed #aaaaaa78;
    border-radius: 3px;
    padding-inline: 12px;
    padding-block: 5px;
    margin-block: 10px;
    margin-inline: 7px;
}
  
summary {}
details[open] {}
  
details[open] summary {
    border-bottom: 1px dashed darkgrey;
    padding-block-end: 0.5rem;
}
  
details > summary {
    list-style-type: ' + ';
    //list-style-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="10" width="8.75" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="currentColor" d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 144L48 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l144 0 0 144c0 17.7 14.3 32 32 32s32-14.3 32-32l0-144 144 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-144 0 0-144z"/></svg>');
}

details[open] > summary {
    list-style-type: ' - ';
    //list-style-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" height="10" width="8.75" viewBox="0 0 448 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="currentColor" d="M432 256c0 17.7-14.3 32-32 32L48 288c-17.7 0-32-14.3-32-32s14.3-32 32-32l352 0c17.7 0 32 14.3 32 32z"/></svg>');
}
//========================


@media screen and (min-width:600px){
    body {
        //display: grid;
        //grid-template-columns: 1fr 5fr;
        //column-gap: 1rem;
        //margin-inline-start: 20%;
        //max-width: 60em;
        max-width: initial;
    }
    
    main {
        //min-height: 80vh;
        //padding-block-start: 2.5rem;
        //max-width: 50%;
        //padding-inline-start: 30%;
            max-width: 40rem;
    margin-inline: auto;
    }
    header {
        //background:none;
    }
    footer {
        display: flex;
        justify-content: center;
        gap: 1rem;
        padding-block: 0rem;
    }
    /*
    nav {
        //display: grid;
        //grid-template-columns: 1fr;
        //justify-items: center;

        //margin-block-start: 2rem;

        a {
            //color: #49728b;
            //margin-block: 0.2rem;
        }
    }
    body.dark-mode nav a {
        color: var(--main-color);
    }
    .nav-link-divider {
        //display: none;
    }
    hr.line{
        border: none;
    }
    .hr-1{
        transform: rotate(90deg);
        transform-origin: left;  
        display:none;      
    }
    .hr-2{
        transform: rotate(90deg);
        transform-origin: right;      
        display: none;  
    }

    footer {
        //grid-column: 1 / 3; MAYBE
        grid-column: 4 / 2;
        margin-block: 0;
    }

    header {
        //display: flex;
        //flex-direction: column;
        //justify-content: center;

        //height: 40rem;

        //position: sticky;
        //top: 0;
    }
    .header-text {
        display: flex;
        font-size: 1rem;
        flex-direction: column;
        align-items: center;
    }
    .header-pic {
        margin-block-start: 2rem;
    }
    h1.title-header {
        margin-block: 0rem;
        text-align: center;
    }
    */
}

